--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
 <head>
-  <base href="https://bogdanMchelariu.github.io/">  <title>Bogdan Mihai Chelariu</title>
+  <base href="/">
+  <title>Bogdan Mihai Chelariu</title>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -80,5 +81,5 @@
 
   ga('create', 'UA-53234284-5', 'auto');
 </script>
-<script src="runtime-es2015.6c4e0925f7f4f5f76487.js" type="module"></script><script src="polyfills-es2015.ee0db8184137d4330937.js" type="module"></script><script src="runtime-es5.2ca8c823b4e1af7cfe09.js" nomodule></script><script src="polyfills-es5.3e4358c60eea0e7198bd.js" nomodule></script><script src="main-es2015.02bba232e841532581b5.js" type="module"></script><script src="main-es5.4cfac21524128350589d.js" nomodule></script></body>
+<script src="runtime-es2015.6c4e0925f7f4f5f76487.js" type="module"></script><script src="polyfills-es2015.ee0db8184137d4330937.js" type="module"></script><script src="runtime-es5.2ca8c823b4e1af7cfe09.js" nomodule></script><script src="polyfills-es5.3e4358c60eea0e7198bd.js" nomodule></script><script src="main-es2015.6ef5f9fd171db3afb6c8.js" type="module"></script><script src="main-es5.c2ffe53964f1bce09a73.js" nomodule></script></body>
 </html>
